Basic setup established

--- a/src/ugd_frontend/src/index.html
+++ b/src/ugd_frontend/src/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -19,12 +19,23 @@
         <button type="submit">Click Me!</button>
       </form>
       <section id="greeting"></section>
+      <div id="semantic-library-root"></div>
     </main>
   </body>
-</html> -->
+</html>
 
 
 
+
+
+
+
+
+
+
+
+
+<!-- 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -42,4 +53,4 @@
   <div id="app"></div>
   <script src="./index.js"></script>
 </body>
-</html>
+</html> -->
