Backend connection established for homepage

--- a/src/ugd_frontend/src/index.html
+++ b/src/ugd_frontend/src/index.html
@@ -9,48 +9,17 @@
     <link type="text/css" rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <main>
-      <img src="logo2.svg" alt="DFINITY logo" />
+    <!-- <main> -->
+      <!-- <img src="logo2.svg" alt="DFINITY logo" />
       <br />
       <br />
       <form action="#">
         <label for="name">Enter your name: &nbsp;</label>
         <input id="name" alt="Name" type="text" />
         <button type="submit">Click Me!</button>
-      </form>
-      <section id="greeting"></section>
+      </form> -->
+      <!-- <section id="greeting"></section> -->
       <div id="semantic-library-root"></div>
-    </main>
+    <!-- </main> -->
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Semantic Library Page</title>
-  <style>
-    #app {
-      width: 100vw;
-      height: 100vh;
-      overflow: auto;
-    }
-  </style>
-</head>
-<body>
-  <div id="app"></div>
-  <script src="./index.js"></script>
-</body>
-</html> -->
