--- a/src/ugd_frontend/src/index.html
+++ b/src/ugd_frontend/src/index.html
@@ -7,6 +7,11 @@
     <base href="/" />
     <link rel="icon" href="favicon.ico" />
     <link type="text/css" rel="stylesheet" href="main.css" />
+    <!-- <style>
+      body {
+        background-color: red;
+      }
+    </style> -->
   </head>
   <body>
     <!-- <main> -->
@@ -17,8 +22,8 @@
         <label for="name">Enter your name: &nbsp;</label>
         <input id="name" alt="Name" type="text" />
         <button type="submit">Click Me!</button>
-      </form> -->
-      <!-- <section id="greeting"></section> -->
+      </form>
+      <section id="greeting"></section> -->
       <div id="semantic-library-root"></div>
     <!-- </main> -->
   </body>
