--- a/src/ugd_frontend/src/index.html
+++ b/src/ugd_frontend/src/index.html
@@ -7,24 +7,15 @@
     <base href="/" />
     <link rel="icon" href="favicon.ico" />
     <link type="text/css" rel="stylesheet" href="main.css" />
-    <!-- <style>
+    <style>
       body {
-        background-color: red;
+        margin: 0;
+        padding: 0;
+        /* background-color: red; */ /* You can un-comment this line if you want a red background */
       }
-    </style> -->
+    </style>
   </head>
   <body>
-    <!-- <main> -->
-      <!-- <img src="logo2.svg" alt="DFINITY logo" />
-      <br />
-      <br />
-      <form action="#">
-        <label for="name">Enter your name: &nbsp;</label>
-        <input id="name" alt="Name" type="text" />
-        <button type="submit">Click Me!</button>
-      </form>
-      <section id="greeting"></section> -->
-      <div id="semantic-library-root"></div>
-    <!-- </main> -->
+    <div id="semantic-library-root"></div>
   </body>
 </html>
