Posting page with basic text editor

--- a/src/ugd_frontend/src/index.html
+++ b/src/ugd_frontend/src/index.html
@@ -6,6 +6,7 @@
     <title>ugd</title>
     <base href="/" />
     <link rel="icon" href="favicon.ico" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="main.css" />
     <style>
       body {
