--- a/src/ugd_frontend/src/index.html
+++ b/src/ugd_frontend/src/index.html
@@ -12,7 +12,6 @@
     <link type="text/css" rel="stylesheet" href="index.css" />
     
     <link rel="stylesheet" href="css/reader.css">
-    <!-- Libs -->
     <script src="js/libs/jszip.min.js"></script>
     <script src="js/libs/md5.min.js"></script>
     <script src="js/libs/epub.min.js"></script>
@@ -29,3 +28,35 @@
     <div id="semantic-library-root"></div>
   </body>
 </html>
+
+
+
+
+
+
+
+<!-- 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>UncensoredGreatsDAO</title>
+
+    <base href="/" />
+    <link rel="icon" href="favicon.ico" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="index.css" />
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="semantic-library-root"></div>
+  </body>
+</html> -->
