--- a/src/alex_frontend/public/index.html
+++ b/src/alex_frontend/public/index.html
@@ -22,6 +22,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root"><div style="width: 100vw;height: 100vh;display:flex;justify-content:center;align-items:center;">Please Wait...</div></div>
   </body>
 </html>
