--- a/src/alex_frontend/public/index.html
+++ b/src/alex_frontend/public/index.html
@@ -10,8 +10,8 @@
     <link rel="icon" href="favicon.ico" />
     
     <!-- Preconnect to external domains -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
 
     <script src="js/libs/jszip.min.js"></script>
     <script src="js/libs/md5.min.js"></script>
@@ -19,6 +19,22 @@
 
     <!-- Critical CSS -->
     <style>
+      @font-face {
+        font-family: 'Syne';
+        src: url('fonts/Syne/Syne-VariableFont_wght.ttf') format('truetype-variations');
+        font-weight: 100 900;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: 'Roboto Condensed';
+        src: url('fonts/Roboto_Condensed/RobotoCondensed-VariableFont_wght.ttf') format('truetype-variations');
+        font-weight: 100 900;
+        font-style: normal;
+        font-display: swap;
+      }
+
       body {
         margin: 0;
         padding: 0;
@@ -58,6 +74,10 @@
       
       @keyframes spin {
         to { transform: rotate(360deg); }
+      }
+
+      .wallet-adapter-modal{
+        pointer-events: auto;
       }
     </style>
   </head>
